第二次更新 未完善

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -7,15 +7,15 @@
     tools:context=".HistoryActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="1">
+        android:orientation="horizontal">
 
         <EditText
             android:id="@+id/ed_serach"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="69dp"
             android:layout_weight="0.8"
             android:inputType="textPersonName"
             android:text="请根据姓名搜索" />
@@ -23,23 +23,21 @@
         <ImageView
             android:id="@+id/img_serach"
             android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_weight="0.2"
+            android:layout_height="68dp"
 
             app:srcCompat="@drawable/serach" />
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
-        <ListView
-            android:id="@+id/list_history"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.8" />
-    </LinearLayout>
+    <ListView
+        android:id="@+id/list_history"
+        android:layout_width="416dp"
+        android:layout_height="662dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </ListView>
 
 </android.support.constraint.ConstraintLayout>
