--- a/app/src/main/res/layout/historylist_item.xml
+++ b/app/src/main/res/layout/historylist_item.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-
+            android:textSize="25dp"
             android:text="TextView" />
 
 
@@ -26,6 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="25dp"
+
             android:text="TextView" />
 
         <TextView
@@ -33,6 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="25dp"
+
             android:text="TextView" />
     </LinearLayout>
 
